force-app/main/default/objects/smagicinteract__Conversation_View_Setting__c/smagicinteract__Conversation_View_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to filter the incoming and outgoing messages&apos; records based on user selection</description>
    <label>Conversation View Setting</label>
</CustomObject>