force-app/main/default/objects/smagicinteract__Conversation_View_Setting__c/fields/smagicinteract__All__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>All</label>
    <type>Checkbox</type>
</CustomField>