force-app/main/default/objects/smagicinteract__Conversation_View_Setting__c/fields/smagicinteract__Owner__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>